--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.fatherofapps.androidbase.ui.home.HomeFragment"
+        android:name="com.lhd.androidbase.ui.home.HomeFragment"
         android:label="HomeFragment" />
 </navigation>
