--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="Home"
+            android:layout_marginBottom="@dimen/dimen_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
