--- a/app/src/main/res/drawable/splash_insert.xml
+++ b/app/src/main/res/drawable/splash_insert.xml
@@ -5,4 +5,5 @@
     android:insetLeft="40dp"
     android:insetTop="38dp"
     android:insetRight="40dp"
-    android:insetBottom="38dp" />
+    android:insetBottom="38dp"
+    />
