--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -9,9 +9,10 @@
     </data>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/itemProduct"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/name"
@@ -25,6 +26,14 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="none"
+            android:loadImage="@{product.component3()}" />
+
 
     </LinearLayout>
 </layout>
