--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="title_page_style">
-        <item name="fontFamily">@font/app_font_bold</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
 
     <style name="body_text_style">
         <item name="android:textSize">14sp</item>
@@ -15,85 +9,12 @@
         <item name="android:includeFontPadding">false</item>
     </style>
 
-    <style name="second_body_text_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#8D8D8D</item>
-        <item name="fontFamily">@font/app_font_regular</item>
-    </style>
-
-    <style name="error_text_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/error_color</item>
-        <item name="fontFamily">@font/app_font_regular</item>
-    </style>
-
-    <style name="product_name_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_bold</item>
-    </style>
-
-    <style name="h2_style">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_bold</item>
-    </style>
-
     <style name="h2_highlight_style">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/primaryColor</item>
         <item name="fontFamily">@font/app_font_bold</item>
     </style>
 
-
-    <style name="h3_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_bold</item>
-    </style>
-
-
-    <style name="special_price_style">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_bold</item>
-    </style>
-
-    <style name="regular_price_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/regular_price_color</item>
-        <item name="fontFamily">@font/app_font_regular</item>
-    </style>
-
-    <style name="product_name_detail_style">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_medium</item>
-    </style>
-
-    <style name="special_price_detail_style">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_medium</item>
-    </style>
-
-    <style name="special_price_hightlight_style">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/primaryColor</item>
-        <item name="fontFamily">@font/app_font_medium</item>
-    </style>
-
-    <style name="regular_price_detail_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/regular_price_color</item>
-        <item name="fontFamily">@font/app_font_regular</item>
-    </style>
-
-    <style name="category_name_style">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_regular</item>
-    </style>
 
     <style name="cta_button_style">
         <item name="android:textSize">16sp</item>
@@ -111,37 +32,23 @@
         <item name="android:background">@drawable/background_button_normal</item>
     </style>
 
-    <style name="text_button_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="fontFamily">@font/app_font_regular</item>
-        <item name="android:stateListAnimator">@null</item>
-        <item name="android:background">@drawable/background_text_button</item>
-    </style>
-
-
-    <style name="edittext_style">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="android:fontFamily">@font/app_font_regular</item>
-        <item name="android:background">@drawable/background_edittext_normal</item>
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingBottom">12dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingEnd">8dp</item>
-        <item name="android:textColorHint">@color/hint_text_color</item>
-        <item name="android:gravity">start|top</item>
-        <item name="android:textCursorDrawable">@null</item>
-    </style>
-
 
     <!--Style splash screen-->
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground" tools:targetApi="s">@color/primaryLightColor</item>
-        <item name="windowSplashScreenAnimatedIcon"  tools:targetApi="s">@drawable/splash_insert</item>
-        <item name="windowSplashScreenIconBackgroundColor" tools:targetApi="s">@color/background_splash_color</item>
+        <item name="windowSplashScreenBackground" tools:targetApi="s">@color/primaryLightColor
+        </item>
+        <item name="windowSplashScreenAnimatedIcon" tools:targetApi="s">@drawable/splash_insert
+        </item>
+        <item name="windowSplashScreenIconBackgroundColor" tools:targetApi="s">
+            @color/background_splash_color
+        </item>
         <item name="android:windowSplashScreenBehavior" tools:targetApi="33">icon_preferred</item>
         <item name="postSplashScreenTheme">@style/Theme.Main</item>
+    </style>
+
+    <style name="Widget.BaseKotlin.AppWidget.Container" parent="android:Widget">
+        <item name="android:id">@android:id/background</item>
+        <item name="android:background">?android:attr/colorBackground</item>
     </style>
 
 
