--- a/app/src/main/res/layout/dialog_notify.xml
+++ b/app/src/main/res/layout/dialog_notify.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -36,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:textColor="#ffffff"
+        android:text="Ok"
         android:textSize="18sp" />
 
 </LinearLayout>
