--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,19 +6,26 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtBack"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="Search"
+
+        <Button
+            android:id="@+id/btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Draw" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.lhd.androidbase.ui.search.CircleCanvas
+            android:id="@+id/cCir"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:colorCir="@color/background_splash_color"
+            app:radiusCir="100" />
+
+    </LinearLayout>
 </layout>
