--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,4 +8,9 @@
     <declare-styleable name="customAttrs">
         <attr name="actionAndroidIcon" format="reference" />
     </declare-styleable>
+
+    <declare-styleable name="CircleCanvas">
+        <attr name="colorCir" format="color" />
+        <attr name="radiusCir" format="float" />
+    </declare-styleable>
 </resources>
